ja/10.0/admin/webconfig-guide.rst
====================
ウェブクロールの設定
====================

概要
====

ウェブクロール設定ページではウェブクロールの設定を行います。

管理方法
========

表示方法
--------

下図のウェブクロールの設定リストページを開くには、左メニューの[クローラー>ウェブ] をクリックします。

|image0|

編集するには設定名をクリックします。

設定の作成
----------

ウェブクロールの設定ページを開くには作成ボタンをクリックします。

|image1|

設定項目
--------

名前
::::

設定名。

URL
:::

クロールの始点となるURL。

クロール対象とするURL
:::::::::::::::::::::

この正規表現は|Fess| クローラーの URL パターンに許可されるものを示します。 

クロール対象から除外するURL
:::::::::::::::::::::::::::

この正規表現は|Fess| クローラーの URL パターンに拒否されるものを示します。

検索対象とするURL
:::::::::::::::::

この正規表現は|Fess| インデクサーの URL パターンに許可されるものを示します。

検索対象から除外するURL
:::::::::::::::::::::::

この正規表現は|Fess| インデクサーの URL パターンに拒否されるものを示します。

設定パラメータ
--------------

クロール設定情報を指定することができます。

深さ
::::

クロールしたドキュメント内に含まれるリンクをたどる際の深さを指定できます。

最大アクセス数
::::::::::::::

インデックスされるurlの数。

ユーザーエージェント
::::::::::::::::::::

|Fess| クローラーの名前

スレッド数
::::::::::

この設定におけるクロールするスレッド数。

間隔
::::

URLをクロールする際のそれぞれのスレッド時間間隔。
Interval time to crawl urls for each thread.

ブースト値
::::::::::

この設定におけるインデックスされたドキュメントの重み。

ロール
::::::

この設定のロール

ラベル
::::::

この設定のラベル

状態
::::

もし有効であるなら、デフォルトクローラーのスケジュールジョブはこの設定を含みます。

設定の削除
----------

リストページの設定名をクリックし、削除ボタンをクリックすると確認画面が表示されます。さらに削除ボタンを押すと設定が削除されます。

例
==

Fess のサイトをクロールする
---------------------------

http://fess.codelibs.org/ 以下のページをクロールするウェブクロール設定を作る場合、下のような設定値にします。 

+----------------------------+-----------------------------+
| 設定項目                   | 設定値                      |
+============================+=============================+
| 名前                       | Fess                        |
+----------------------------+-----------------------------+
| URL                        | http://fess.codelibs.org/   |
+----------------------------+-----------------------------+
| クロール対象とするURL      | http://fess.codelibs.org/.* |
+----------------------------+-----------------------------+

他の設定値はデフォルト値を使用します。

.. |image0| image:: ../../../resources/images/en/10.0/admin/webconfig-1.png
.. |image1| image:: ../../../resources/images/en/10.0/admin/webconfig-2.png
